--- a/reaction timer.HTML
+++ b/reaction timer.HTML
@@ -2,7 +2,7 @@
 	<head>
 		<title>reaction time calculator</title>
 
-        
+        <link rel="stylesheet" type="text/css" href="reactionstyle.css" />
 
 	</head>
 	<body>
