--- a/reaction timer.HTML
+++ b/reaction timer.HTML
@@ -13,7 +13,7 @@
             <div id="shape"></div>
         </div>
         
-        
+        <script type="text/javascript" src="reactionscript.js"></script>
 
 
 	</body>
